# rust-canister-wallet-for-agent

./: .gitignore  Cargo.toml  README.md  canister-wallet-deployer.md  canister-wallet-js-usage.md  dfx.json  package-lock.json
allchain-api-jssdk/: README.md  package.json
allchain-api-jssdk/src/: index.js
backend/: Cargo.toml  addressing.rs  api.rs  aptos.rs  aptos_mainnet.rs  arb.rs  avax.rs  backend.did  base.rs  bitcoin.rs  bsc.rs  btc.rs  chains.rs  error.rs  eth.rs  evm_rpc.rs  icp.rs  internet_computer.rs  lib.rs  near.rs  near_mainnet.rs  okb.rs  op.rs  outcall.rs  polygon.rs  sepolia.rs  sol.rs  solana.rs  solana_testnet.rs  state.rs  sui.rs  sui_mainnet.rs  token_registry.rs  ton.rs  ton_mainnet.rs  tron.rs  trx.rs  types.rs
backend/config/: app_config.rs  explorer_config.rs  mod.rs  rpc_config.rs  token_list_config.rs
backend/config/token_list/: arbitrum.rs  avalanche.rs  base.rs  bsc.rs  ethereum.rs  icp.rs  internet_computer.rs  mod.rs  optimism.rs  polygon.rs  sepolia.rs  solana.rs
backend/sdk/: evm_tx.rs  mod.rs  sol_tx.rs  ton_tx.rs
canister-factory/: Cargo.toml  canister_factory.did  lib.rs
deploy-canister-js-sdk-for-agent/examples/: add-token.js  bootstrap-openclaw-backend.js  send-eth.js
deploy-canister-js-sdk-for-agent/src/: deployer.js  identity-file.js  index.js
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
js-sdk-for-agent/: package.json
js-sdk-for-agent/examples/: deploy-backend-canister.js  (+1 more)
skills/: canister-wallet-js-usage-for-agent.md
tool/: deploy-chat-ledger.sh  deploy-ledger.sh
(+24 files in other folders)
