[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "schnorr", "ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
num-bigint = "0.4"
ed25519-dalek = { version = "2", default-features = false }
blake2 = "0.10"
